# CncInterfaceARM

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  interface_pico.uf2  lwipopts.h  lwipopts_common.h  main.cpp  main.h  mbedtls_config.h  platformio.ini
analog/: adc_utils.cpp
dhcp/: dhcpserver.cpp  dhcpserver.h
dns/: dnsserver.cpp  dnsserver.h
domain/: CurrentMeasurement.cpp  CurrentMeasurement.h  InterfaceMeasurement.cpp  InterfaceMeasurement.h  SmartInterface.cpp  SmartInterface.h
domain/json/: JsonDeserialize.h  JsonSerializable.h
eeprom/: eeprom.cpp  eeprom.h
hardware/: rosc.c
http_server/: server.cpp  server.h
oled/: oled_display.cpp  oled_display.h
settings/: PowerSettings.cpp  PowerSettings.h  SleepSettings.cpp  SleepSettings.h
sleep/: sleep.c
src/: main.cpp  main.h
src/analog/: adc_utils.cpp  adc_utils.h
src/config/: configuration.h
src/hardware/: rosc.c
src/lcd/: rgb_lcd.cpp  rgb_lcd.h
src/sleep/: sleep.c  sleep.h
src/utils/: utils.cpp  utils.h
src/wifi/: ESP8266.cpp  ESP8266.h  HttpClient.cpp  HttpClient.h
utils/: configurationAssist.cpp  oledImages.h  pin_mapping.h  sleepUtils.cpp  utils.cpp  utils.h
wifi/: HTTPRequestBuilder.cpp  HTTPRequestBuilder.h  SimpleRequestBuilder.cpp  SimpleRequestBuilder.h  WiFiManager.cpp  WiFiManager.h  tls2_client.cpp  tls2_client.h  tls_client.cpp  tls_client.h
